Update 'jkyke70vo-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:7babe850872e583fc5ade05c5c2ec5e239d16f0b@sha256:5b59838707a044bfa07c365e07a1cd27cf20cac76a00d00b27a5b03070217fca

--- a/components/jkyke70vo-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/jkyke70vo-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jkyke70vo-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:7babe850872e583fc5ade05c5c2ec5e239d16f0b@sha256:5b59838707a044bfa07c365e07a1cd27cf20cac76a00d00b27a5b03070217fca
+          name: container-image
